# neuralgcm

./: README.md  conftest.py  pyproject.toml
.github/workflows/: ci-experimental.yml  ci-legacy.yml
docs/: checkpoint_modifications.ipynb  data_preparation.ipynb  deepdive_into_models.ipynb  inference_demo.ipynb  neuralgcm_datasets.ipynb
neuralgcm/: __init__.py  api.py  models_test.py  stochastic_test.py
neuralgcm/experimental/: api.py  array_transforms.py  circulation_models.py  coordinates.py  coordinates_test.py  data_specs.py  diagnostics.py  dynamic_io.py  equations.py  fiddle_tags.py  interpolators.py  interpolators_test.py  module_utils.py  normalizations.py  normalizations_test.py  observation_operators.py  observation_operators_test.py  orographies.py  parallelism.py  parallelism_test.py  process_parameterizations.py  pytree_mappings.py  pytree_mappings_test.py  pytree_transforms.py  pytree_transforms_test.py  random_processes.py  random_processes_test.py  spatial_filters.py  standard_layers.py  standard_layers_test.py  state_conversion.py  step_filters.py  time_integrators.py  time_integrators_test.py  towers.py  towers_test.py  typing.py  xarray_utils.py  xarray_utils_test.py
neuralgcm/experimental/atmosphere/: diagnostics.py  diagnostics_test.py  equations.py  observation_operators.py  observation_operators_test.py  parameterizations.py  state_conversion.py  transforms.py  transforms_test.py
neuralgcm/experimental/coordax/: README.md  __init__.py  coordinate_systems.py  coordinate_systems_test.py  core.py  core_test.py  fields.py  fields_test.py  jax_datetime_integration_test.py  named_axes.py  named_axes_test.py  ndarrays.py  testing.py  utils.py  xarray.py  xarray_test.py
neuralgcm/experimental/core/: api.py  array_transforms.py  boundaries.py  boundaries_test.py  checkpointing.py  checkpointing_test.py  coordinates.py  data_specs.py  (+46 more)
neuralgcm/legacy/: api.py  api_test.py  correctors.py  decoders.py  decoders_test.py  embeddings.py  encoders.py  encoders_test.py  equations.py  features.py  features_test.py  filters.py  forcings.py  forcings_test.py  initializers_test.py  layers.py  layers_test.py  mappings.py  mappings_test.py  model_builder.py  model_utils_test.py  models_test.py  optimization_test.py  parameterizations.py  parameterizations_test.py  perturbations.py  steps.py  stochastic_test.py  towers.py  towers_test.py  transforms.py  transforms_test.py
neuralgcm/reference_code/: experiment.py  metrics.py  stochastic_losses.py  train_utils.py
(+34 files in other folders)
